--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "js-cookie": "^3.0.5",
     "notistack": "^3.0.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
