--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-kawaii": "^0.18.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
